README.mdを追加しました。

--- a/KansugiClassifier.ipynb
+++ b/KansugiClassifier.ipynb
@@ -11,11 +11,15 @@
     "\n",
     "ラベルデータの用意からモデルの作成、学習、推論までの一通りの流れを確認できます。\n",
     "\n",
+    "### 実行環境\n",
+    "\n",
+    "Jupyter-Notebook上で動作します。\n",
+    "\n",
     "### リポジトリ\n",
     "\n",
-    "GitHubの以下のリポジトリして公開しています。\n",
+    "ラベルデータを含めて、GitHubの以下のリポジトリとして公開しています。\n",
     "\n",
-    "\n",
+    "* https://github.com/lhideki/kansuji-classifier\n",
     "\n",
     "### ディレクトリ構成\n",
     "\n",
